-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1, 5.3.0 Beta1
-
None
-
Android tablet, NEXUS 7
-
-
93fd268d531fd61c9c619adc4e08ea9cb0cb2fcd
Steps to reproduce:
- make sure predictive text input is on
- write "abcd" in first TextField
- make sure you don't select the word from the predictive suggestions, neither press return/done or space
- then select the next empty TextField and type "efgh"
- the resulting string in the second TextField is now "abcdefgh" instead of just "efgh"
import QtQuick 2.1 import QtQuick.Controls 1.1 Rectangle { width: 360 height: 360 Column{ TextField { width: 400 height: 200 } TextField { width: 400 height: 200 } } }
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-38047 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 83340,1 | Android: Reset input method when focus changes | release | qt/qtbase | Status: MERGED | +2 | 0 |